ferritin/src/snapshots/ferritin__tests__get_struct_details_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestStruct\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html",
  "meta": {
    "name": "TestStruct",
    "kind": "struct",
    "visibility": "public",
    "definedAt": "fixture_crate::TestStruct",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "A simple struct for testing basic functionality.",
              "style": "Plain"
            }
          ]
        },
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "This struct demonstrates basic usage patterns and should show completely",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "since it only has one paragraph of documentation.",
              "style": "Plain"
            }
          ]
        },
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "It uses ",
              "style": "Plain"
            },
            {
              "text": "Vector",
              "style": "InlineCode",
              "path": "alloc::vec::Vec"
            },
            {
              "text": " for testing intra-doc link resolution with renamed imports.",
              "style": "Plain"
            },
            {
              "text": " ",
              "style": "Plain"
            },
            {
              "text": "Also tests ",
              "style": "Plain"
            },
            {
              "text": "HashMap",
              "style": "InlineCode",
              "path": "std::collections::hash::map::HashMap"
            },
            {
              "text": " which is a non-renamed import.",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "struct",
    "name": "TestStruct",
    "shape": "plain",
    "fields": [
      {
        "name": "field",
        "pub": true,
        "type": [
          {
            "text": "String",
            "style": "TypeName",
            "path": "alloc::string::String"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A public field",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "count",
        "pub": true,
        "type": [
          {
            "text": "u32",
            "style": "TypeName"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Another public field",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "private_field",
        "pub": false,
        "type": [
          {
            "text": "bool",
            "style": "TypeName"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A private field",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ],
    "methods": [
      {
        "name": "ASSOCIATED_CONST",
        "kind": "const",
        "visibility": "public",
        "signature": [
          {
            "text": "pub",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "const",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "ASSOCIATED_CONST",
            "style": "Plain"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "This is an associated constant for a struct",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "new",
        "kind": "method",
        "visibility": "public",
        "returns": [
          {
            "text": "Self",
            "style": "Generic"
          }
        ],
        "signature": [
          {
            "text": "pub",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "new",
            "style": "Plain",
            "path": "fixture_crate::TestStruct::new"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "field",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "String",
            "style": "TypeName",
            "path": "alloc::string::String"
          },
          {
            "text": ",",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "count",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "u32",
            "style": "TypeName"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Self",
            "style": "Generic"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Create a new TestStruct",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "get_field",
        "kind": "method",
        "visibility": "public",
        "returns": [
          {
            "text": "&",
            "style": "Operator"
          },
          {
            "text": "str",
            "style": "TypeName"
          }
        ],
        "signature": [
          {
            "text": "pub",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "get_field",
            "style": "Plain",
            "path": "fixture_crate::TestStruct::get_field"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "&",
            "style": "Punctuation"
          },
          {
            "text": "self",
            "style": "Plain"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "&",
            "style": "Operator"
          },
          {
            "text": "str",
            "style": "TypeName"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Get the field value",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "increment_count",
        "kind": "method",
        "visibility": "public",
        "signature": [
          {
            "text": "pub",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "increment_count",
            "style": "Plain",
            "path": "fixture_crate::TestStruct::increment_count"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "&",
            "style": "Punctuation"
          },
          {
            "text": "mut",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "self",
            "style": "Plain"
          },
          {
            "text": ")",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Update the count",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ],
    "traitImpls": [
      {
        "traitName": "Any",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/any/trait.Any.html",
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Borrow",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/borrow/trait.Borrow.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "Self",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "BorrowMut",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/borrow/trait.BorrowMut.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "Self",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Clone",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html",
        "providedMethods": [
          "clone_from"
        ],
        "isStd": true
      },
      {
        "traitName": "CloneToUninit",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/clone/trait.CloneToUninit.html",
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Debug",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html",
        "isStd": true
      },
      {
        "traitName": "Freeze",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Freeze.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "From",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.From.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "Self",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Into",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.Into.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "RefUnwindSafe",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.RefUnwindSafe.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "Send",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Send.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "Sync",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Sync.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "TestTrait",
        "traitUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.TestTrait.html",
        "assocTypes": [
          {
            "name": "T",
            "type": [
              {
                "text": "String",
                "style": "TypeName",
                "path": "alloc::string::String"
              }
            ]
          }
        ]
      },
      {
        "traitName": "ToOwned",
        "traitUrl": "https://doc.rust-lang.org/nightly/alloc/borrow/trait.ToOwned.html",
        "assocTypes": [
          {
            "name": "Owned",
            "type": [
              {
                "text": "Self",
                "style": "Generic"
              }
            ]
          }
        ],
        "providedMethods": [
          "clone_into"
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "TryFrom",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "assocTypes": [
          {
            "name": "Error",
            "type": [
              {
                "text": "Infallible",
                "style": "TypeName",
                "path": "core::convert::Infallible"
              }
            ]
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "TryInto",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.TryInto.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "assocTypes": [
          {
            "name": "Error",
            "type": [
              {
                "text": "<",
                "style": "Punctuation"
              },
              {
                "text": "U",
                "style": "Generic"
              },
              {
                "text": " ",
                "style": "Plain"
              },
              {
                "text": "as",
                "style": "Keyword"
              },
              {
                "text": " ",
                "style": "Plain"
              },
              {
                "text": "TryFrom",
                "style": "TypeName",
                "path": "core::convert::TryFrom"
              },
              {
                "text": "<",
                "style": "Punctuation"
              },
              {
                "text": "Self",
                "style": "Generic"
              },
              {
                "text": ">",
                "style": "Punctuation"
              },
              {
                "text": ">",
                "style": "Punctuation"
              },
              {
                "text": "::",
                "style": "Punctuation"
              },
              {
                "text": "Error",
                "style": "Plain"
              }
            ]
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Unpin",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Unpin.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "UnsafeUnpin",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.UnsafeUnpin.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "UnwindSafe",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.UnwindSafe.html",
        "isSynthetic": true,
        "isStd": true
      }
    ]
  }
}
